[package]
name = "kessler"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Reece Humphreys"]
keywords = ["kessler", "space", "simulation", "fragmentation"]
readme = "README.md"
repository = "https://github.com/reecehumphreys/kessler/"
description = """
Kessler is a library for simulating fragmentation events in low Earth orbit.
"""

[dependencies]
blas-src = { version = "0.8", features = ["openblas"] }
ndarray = { version = "=0.15.6", features = ["blas", "rayon"] }
ndarray-linalg = "0.14"
ndarray-rand = "0.13.0"
openblas-src = { version = "0.10", features = ["cblas", "system"] }
rand = "0.8.5"
rand_distr = "0.4.3"

[profile.release]
strip = true # Strip symbols from the binary
lto = true # Enable link-time optimizations
codegen-units = 1 # Maximize size reduction optimizations
